@@ -555,6 +555,71 @@ class JavaCompileCompatibilityIntegrationTest extends AbstractIntegrationSpec im
         classJavaVersion(javaClassFile("Main.class")) == JavaVersion.VERSION_17
     }
 
+    def sourceUsingLanguageFeaturePreviewFromJava21() {
+        """
+            public class Main {
+                public static void main(String[] args) {
+                    String version = System.getProperty("java.version").toString();
+                    System.out.println("Main: java " + version);
+
+                    // Error to use '_' name since Java 9, and supported as "unnamed variable" in Java 21 as Preview
+                    int _ = version.length();
+                }
+            }
+        """
+    }
+
+    def "preview features are not allowed without an explicit flag"() {
+        def jdk = AvailableJavaHomes.getJdk(JavaVersion.VERSION_21)
+
+        buildFile << """
+            apply plugin: "java"
+
+            java {
+                toolchain {
+                    languageVersion = JavaLanguageVersion.of(${jdk.javaVersion.majorVersion})
+                }
+            }
+        """
+
+        file("src/main/java/Main.java") << sourceUsingLanguageFeaturePreviewFromJava21()
+
+        when:
+        withInstallations(jdk).fails(":compileJava")
+
+        then:
+        true
+        failure.assertHasErrorOutput("Main.java:8: error: unnamed variables are a preview feature")
+        failure.assertHasErrorOutput("(use --enable-preview to enable unnamed variables)")
+        javaClassFile("Main.class").assertDoesNotExist()
+    }
+
+    def "preview features are allowed with an explicit flag"() {
+        def jdk = AvailableJavaHomes.getJdk(JavaVersion.VERSION_21)
+
+        buildFile << """
+            apply plugin: "java"
+
+            java {
+                toolchain {
+                    languageVersion = JavaLanguageVersion.of(${jdk.javaVersion.majorVersion})
+                }
+                enablePreview = true
+            }
+
+        """
+
+        file("src/main/java/Main.java") << sourceUsingLanguageFeaturePreviewFromJava21()
+
+        when:
+        withInstallations(jdk).succeeds(":compileJava")
+
+        then:
+        executedAndNotSkipped(":compileJava")
+        errorOutput.contains("Main.java uses preview features of Java SE 21.")
+        classJavaVersion(javaClassFile("Main.class")) == JavaVersion.VERSION_21
+    }
+
     private static String currentJavaVersion() {
         return Jvm.current().javaVersion.toString()
     }
